# NuMaker-mbed-ce-Azure-IoT-CSDK-PnP-example

./: .gitmodules  CMakeLists.txt  README.md  cmake-variants.yaml  mbed_app.json5  mbed_app_cellular.json5
configs/: aziot_user_config.h
custom_targets/: CMakeLists.txt  custom_targets.json5
custom_targets/upload_method_cfg/: NUMAKER_IOT_M487_DEV.cmake
drivers/sensor/COMPONENT_BMX055/: CMakeLists.txt
pnp/pnp_numaker_iot_m487_dev/: pnp_numaker_iot_m487_dev.cpp
pnp/pnp_temperature_controller/: pnp_temperature_controller.cpp
